# diagram-generator

./: .dockerignore  .env.docker.example  .env.example  .gitignore  =2  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.uv  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.uv.yml  docker-compose.yml  project_structure.json  prompts.yaml  pyproject.toml  requirements-core.txt  requirements.txt  run.py  run_tests.py
docker/: README.md  build.sh  deploy.sh  healthcheck.py
docker/nginx/: nginx.conf
docs/: QUICKSTART.md
examples/: python_client_example.py  test_api.py
src/agents/: __init__.py  assistant_agent.py  diagram_agent.py
src/api/: __init__.py  diagram.py  health.py  main.py  middleware.py  models.py
src/core/: config.py  logging.py
src/llm/: base.py  client.py  gemini_client.py  mock_client.py  prompt_manager.py
src/tools/: __init__.py  diagram_builder.py  validator.py
src/utils/: decorators.py
tests/: __init__.py  conftest.py
tests/fixtures/: mock_responses.json
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_agents.py  test_config.py  test_decorators.py  test_llm_clients.py  test_logging.py  test_tools.py
